# zeprocess-26

./: .coverage  .env.example  .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_SUMMARY.txt  Dockerfile  INFRASTRUCTURE.md  INFRASTRUCTURE_INDEX.md  MEGA-QUIXAI-ARCHITECTURE-DELIVERED.txt  Makefile  PHASE1-COMPLETION.md  QUICK_REFERENCE.md  README.md  REQUIREMENTS_CHECKLIST.md  SCHEMAS.html  SECURITY_INDEX.md  START_HERE.md  docker-compose.yml  main.py  pitch-youtube-rag-pipeline.md  pyproject.toml  pytest.ini
.claude/: MEMORY.md  settings.json
.claude/agents/: architect.md  cdc-validator.md  code-reviewer.md  infra-engineer.md  orchestrator.md  performance-reviewer.md  quality-gate-keeper.md  refactor-guide.md  security-auditor.md  tdd-engineer.md
.claude/commands/: golden-workflow.md  lint.md  quality-gate.md  refactor.md  review.md  test.md
.claude/memory/: decisions.md  project_vision.md  session-log.txt
.claude/rules/: cdc-conformity.md  git.md  golden-workflow.md  python.md  quality-gates.md  security.md  testing.md
.claude/skills/onenote-export/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
agents/: __init__.py  base.py
agents/closing/: __init__.py  llm_interface.py  payment_manager.py  rag_interface.py  state_machine.py
agents/follow/: __init__.py
agents/seduction/: __init__.py
config/: settings.py
docs/: 00-ARCHITECTURE-INDEX.md  00-INDEX.md  01-langgraph-orchestration-architecture.md  01-prd-mega-quixai.md  03-claude-sdk-integration.md  03-deployment-operations-guide.md  04-safety-v-code.md  06-architecture-decisions.md  CDC.md  EXECUTIVE-SUMMARY-LANGGRAPH-ARCHITECTURE.md  NEXT-STEPS-AND-STATUS.md  README.md  audit-golden-workflow.md  cahier-de-recettes.md  clarifications-quixai.txt  creative.md  evals.md  plan.md  sprint-report-2026-03-20.md
docs/_archive/: OVH-INDEX.md  SECURITY_AUDIT_SUMMARY.md  code-skeleton.md  deployment-guide-legacy.md  licensing.md  quick-deploy.md  review-summary.md  roadmap-v1-legacy.md  security-audit-legacy.md  security-fixes-legacy.md  security-readme-legacy.md  summary.txt  system-overview.md
docs/adr/: 001-token-strategy.md  002-vague3-remediation.md  003-graph-retry-strategy.md  004-html-sanitization.md  005-export-batch-design.md  006-hierarchy-cache.md  007-cli-async-pattern.md  008-settings-singleton.md  009-vague5-completion.md
docs/architecture/: hexis-prod-architecture.md
docs/business/: business-model.md  content-strategy-seduction.md  pricing-and-tiers.md  quickstart-usecases.md
docs/deployment/: OVH-QUICK-START.md  architecture-to-deployment.md  ovh-production-plan.md
docs/security/: codebase-audit.md  hexis-prod-hardening.md  migrations.sql  quick-checklist.md
docs/specs/: auth-stripe-multitenancy.md  knowledge-base-rag-architecture.md  phase1-completion-status.md  phase2-plan.md  rag-implementation-checklist.md  rag-implementation-guide.md  rag-operations-guide.md  youtube-rag-pipeline-plan.md
docs/specs/agent-closing/: architecture.md  executive-summary.md  implementation.md  use-cases.md
docs/specs/agent-seduction/: architecture.md  executive-summary.md  implementation.md  prompts.md  risks.md
docs/specs/lead-acquisition/: 01-lead-acquisition-architecture.md  02-tools-apis-reference.md  03-icp-scoring-strategy.md  04-deployment-implementation.md  executive-summary.md  overview.md
docs/specs/mega-quixai/: 01-observabilite-langfuse.md
docs/status/: implementation-roadmap-v2.md
infra/: README.md
infra/config/: logging.yml  schema.sql
infra/docker/: Dockerfile.api  docker-compose.yml
infra/nginx/: nginx.conf
infra/scripts/: backup.sh  init-secrets.sh  post-deploy-check.sh  setup-firewall.sh
infra/systemd/: mega-quixai-agent-acquisition.service  mega-quixai-agent-closing.service  mega-quixai-agent-seduction.service  mega-quixai.target
prompt/: prompt1.txt
scripts/: embed_ingest.py  mcp_server.py  mega_download.py  pipeline.py  search_videos.py  srt_download.py  transcribe.py
src/: auth.py  bundler.py  cli.py  config.py  exporter.py  graph.py  hierarchy.py
src/agents/: __init__.py  acquisition.py  base.py  closing.py  seduction.py
src/api/: main.py
src/database/: __init__.py  models.py  repository.py
src/graph/: __init__.py  builder.py
src/state/: __init__.py  schema.py
tests/: conftest.py  test_auth.py  test_bundler.py  test_cli.py  test_config.py  test_exporter.py  test_graph.py  test_hierarchy.py  test_phase1_orchestration.py
tests/unit/: test_llm_interface.py  test_security_fixes.py
