[project]
name = "youtube-rag-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "mcp[cli]>=1.26.0",
    "psycopg[binary]>=3.3.3",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "srt>=3.5.3",
    "tenacity>=8.0",
]
