[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mega-quixai"
version = "0.1.0"
description = "Autonomous AI agents for lead generation, closing, and customer retention"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Jules", email = "contact@example.com"}
]

dependencies = [
    # LLM & Agentic Frameworks
    "anthropic>=0.28.0",
    "langgraph>=0.2.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.1",
    
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Database
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    
    # AI/ML
    "sentence-transformers>=5.3.0",
    "faster-whisper>=1.2.1",
    
    # External APIs
    "requests>=2.32.5",
    "stripe>=7.8.0",
    "twilio>=8.10.0",
    
    # Observability & Monitoring
    "langfuse>=2.0.0",
    "python-json-logger>=2.0.7",
    
    # Utilities
    "python-dotenv>=1.2.2",
    "tenacity>=8.0",
    "srt>=3.5.3",
    "pycryptodome>=3.23.0",
    "mcp[cli]>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.2.2",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov=agents --cov-report=term-missing --cov-fail-under=80 -v"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "langfuse.*",
    "twilio.*",
    "stripe.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long, handled by formatter
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.isort]
known-first-party = ["src", "agents", "tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.coverage.run]
source = ["src", "agents"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
