[project]
name = "onenote-exporter"
version = "0.1.0"
description = "Export OneNote pages to PDF via Microsoft Graph API for LLM ingestion"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "httpx>=0.27",
    "msal>=1.28",
    "click>=8.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "weasyprint>=62",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "pyright>=1.1",
]

[project.scripts]
onenote-export = "src.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short -q"
asyncio_mode = "strict"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
